[tool.poetry]
name = "package-name"
version = "0.1.0"
description = "TEMPLATE"
license = "MIT"
readme = "README.md"
authors = ["KaoruNishikawa <k.nishikawa@a.phys.nagoya-u.ac.jp>"]
homepage = "https://github.com/necst-telescope/Package-Name"
repository = "https://github.com/necst-telescope/Package-Name"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.19"

[tool.poetry.dev-dependencies]
black = "^22.3"
flake8 = "^3.8"
ipykernel = "^6.3"
jupyter = "^1.0"
m2r2 = "^0.2"
notebook = "^6.4"
pydata-sphinx-theme = "^0.7"
pytest = "^5.2"
sphinx = "^4.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

